err/stanza.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/stanza'...
Listing './lib/python3.5/site-packages/stanza/cluster'...
Compiling './lib/python3.5/site-packages/stanza/cluster/pick_gpu.py'...
***   File "./lib/python3.5/site-packages/stanza/cluster/pick_gpu.py", line 40
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stanza/ml'...
Listing './lib/python3.5/site-packages/stanza/monitoring'...
Compiling './lib/python3.5/site-packages/stanza/monitoring/crc32c.py'...
***   File "./lib/python3.5/site-packages/stanza/monitoring/crc32c.py", line 36
    0x00000000L, 0xf26b8303L, 0xe13b70f7L, 0x1350f3f4L,
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stanza/monitoring/progress.py'...
***   File "./lib/python3.5/site-packages/stanza/monitoring/progress.py", line 115
    print '%s (~%d%% done, ETA %s)' % (stack_printout,
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/stanza/nlp'...
Listing './lib/python3.5/site-packages/stanza/research'...
Compiling './lib/python3.5/site-packages/stanza/research/codalab.py'...
***   File "./lib/python3.5/site-packages/stanza/research/codalab.py", line 26
    print cmd
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/stanza/text'...
Listing './lib/python3.5/site-packages/stanza/unstable'...
Listing './lib/python3.5/site-packages/stanza/util'...
Listing './lib/python3.5/site-packages/stanza-0.3.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/slow_tests'...
Listing './lib/python3.5/site-packages/test/slow_tests/text'...
Listing './lib/python3.5/site-packages/test/unit_tests'...
Listing './lib/python3.5/site-packages/test/unit_tests/ml'...
Listing './lib/python3.5/site-packages/test/unit_tests/monitoring'...
Listing './lib/python3.5/site-packages/test/unit_tests/nlp'...
Listing './lib/python3.5/site-packages/test/unit_tests/text'...
Listing './share'...
Listing './share/python-wheels'...
